<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PeachBeige">


    <ImageView
        android:id="@+id/camp_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"

        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/campName"
                android:background="@drawable/rounded_camp_title_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:elevation="5dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/campDescription"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1.5"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_camp_description_backgrouond"
                android:textColor="@color/white"
                android:padding="12dp"
                android:textSize="20sp"
                android:justificationMode="inter_word" />
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/location"
                android:layout_height="35dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/location"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppinsbold"
                    android:textColor="@color/black"

                    />
                <TextView
                    android:id="@+id/campLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:fontFamily="@font/poppinsmedium"
                    android:textColor="@color/black" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:src="@drawable/calender" />
            <TextView
                android:id="@+id/campReservation"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </TableRow>
        <TableRow
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:paddingLeft="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="17sp"
                />
            <TextView
                android:id="@+id/campPrice"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="17sp"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/black" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">
            <Button
                android:id="@+id/reservingButton"
                android:layout_gravity="center"
                android:backgroundTint="@color/Orange"
                android:text="@string/BookNow"
                android:textStyle="bold"
                android:padding="10dp"
                android:elevation="5dp"
                android:layout_margin="3dp"
                android:shadowColor="@color/black"
                />
        </TableRow>
    </TableLayout>
        </LinearLayout>
    </ScrollView>